fix data table: add nowrap attribute to header

--- a/modules/data-table/scss/_data-table.scss
+++ b/modules/data-table/scss/_data-table.scss
@@ -29,6 +29,7 @@
     & > thead > tr > th {
         font-weight: 400;
         text-align: left;
+        white-space: nowrap;
     }
 }
 
